python-txaio (2.5.1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * d/rules: Fixed UPSTREAM_GIT.
  * Removed silly patch: do-not-use-alabaster-theme.patch.
  * Add --ignore=test/test_packaging.py when running tests as it fails (we
    don't care testing the build of sdists in the Debian context anyway).
  * Fix path when building sphinx doc (upstream changed it).
  * Add no-intersphinx.patch.
  * Add remove-privacy-breach-in-docs.patch.
  * Standards-Version is now 3.9.8 (no change).

 -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jul 2016 13:55:00 +0200

python-txaio (1.0.0-3) unstable; urgency=medium

  * Using python$$pyvers -m pytest instead of py.test-X.Y (Closes: #814847).
  * Do not pre-depends on dpkg with xz support anymore.
  * VCS using HTTPS.
  * Fixed debian/copyright ordering.

 -- Thomas Goirand <zigo@debian.org>  Wed, 17 Feb 2016 06:00:47 +0000

python-txaio (1.0.0-2) unstable; urgency=medium

  * Fixed wrong format for Uploaders: field due to wrap-and-sort bug.

 -- Thomas Goirand <zigo@debian.org>  Sun, 03 May 2015 00:47:57 +0200

python-txaio (1.0.0-1) unstable; urgency=medium

  * Initial release. (Closes: #783055)

 -- Thomas Goirand <zigo@debian.org>  Tue, 21 Apr 2015 11:02:23 +0200